@@ -1132,6 +1132,21 @@ else
 		$(SHELL) -c '$(SPLINT) -I$(SRCDIR) -I/usr/include/linux $(FLAGS) $(SPLINTFLAGS) $(filter %.c %.h,$(FILES)) >> splint.out;'
 endif
 
+CPPCHECKARGS := $(filter -I%,$(FLAGS))
+CPPCHECKARGS += -j8
+CPPCHECKARGS += --std=c99 --std=c++14
+CPPCHECKARGS += --suppressions-list=suppressions.cppcheck --inline-suppr
+CPPCHECKARGS += --enable=all --force --inconclusive
+CPPCHECKARGS += --error-exitcode=5
+.PHONY: cppcheck
+cppcheck: $(SCIPLIBBASESRC) $(OBJSCIPLIBSRC) $(LPILIBSRC) $(TPILIBSRC) $(MAINSRC) $(SYMSRC) $(SCIPCONFIGHFILE) $(SCIPEXPORTHFILE) $(SCIPBUILDFLAGSFILE) githash
+		-rm -f cppcheck.log
+ifeq ($(FILES),)
+		cppcheck $(CPPCHECKARGS) $^ 2>&1 | tee cppcheck.log
+else
+		cppcheck $(CPPCHECKARGS) $(FILES) 2>&1 | tee cppcheck.log
+endif
+
 .PHONY: doc
 doc:
 		cd doc; $(SHELL) builddoc.sh;
@@ -1769,6 +1784,7 @@ help:
 		@echo "  - lint: Run lint on all SCIP files. (Needs flexelint.)"
 		@echo "  - pclint: Run pclint on all SCIP files. (Needs pclint.)"
 		@echo "  - splint: Run splint on all C SCIP files. (Needs splint.)"
+		@echo "  - cppcheck: Run cppcheck on SCIP source files. (Needs cppcheck.)"
 		@echo "  - clean: Removes all object files."
 		@echo "  - cleanlibs: Remove all SCIP libraries."
 		@echo "  - tags: Creates TAGS file that can be used in (x)emacs."
